Change the loader screen style, fix z-index of favorite icon

--- a/base/_base.scss
+++ b/base/_base.scss
@@ -6,5 +6,11 @@ body {
 	font-family: 'Roboto', sans-serif;
 	width: 100vw;
 	margin: auto;
+	z-index: 9999;
+}
+
+a {
+	text-decoration: none;
+	color: initial;
 }
 
