--- a/components/_button.scss
+++ b/components/_button.scss
@@ -6,6 +6,7 @@
 		border-style: none;
 		margin: 1em 0 2em 0;
 		box-shadow: 0px 3px 16px 3px rgba(0, 0, 0, 0.23);
+		cursor: pointer;
 	}
 
 
@@ -18,6 +19,7 @@
 				font-size: 1.5rem;
 				position: relative;
 				z-index: 1;
+				cursor: pointer;
 
 			&:hover {
 					& .favorite--hover {
