--- a/main-home.scss
+++ b/main-home.scss
@@ -5,122 +5,9 @@
 @import './components/logo';
 @import './components/button';
 @import './layouts/footer';
+@import './pages/home';
 
 
-
-.location {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	background-color: $bg-one;
-	border-top-style: inset;
-	p {
-		margin-left: 1em;
-		font-weight: bold;
-	}
-}
-
-.explore {
-	background-color: $bg-two;
-	padding: 2em 2em;
-
-	h1 {
-	font-size: 23px;
-	margin-top: 0px;
-	padding: 20px 25px 10px 25px;
-	font-weight: bold;
-	
-	}
-}
-
-.functionality {
-	width: 90vw;
-	margin: auto;
-
-	ol {
-		counter-reset: functionality;
-		list-style: none;
-		padding-inline-start: 0.8em;
-		font-weight: 600;
-	}
-
-	li {
-		background-color: $bg-two;
-		padding: 2em 2em 2em 0;
-		margin: 1em 0;
-		border-radius: 2em;
-		box-shadow: 0px 6px 23px 3px rgba(0, 0, 0, 0.24);
-		counter-increment: functionality;
-
-		&::before {
-			content: counter(functionality);
-			background-color: $primary-color;
-			padding: 5px 8px;
-			border-radius: 100%;
-			margin-right: 2em;
-			margin-left: -0.8em;
-			color: white;
-			font-size: 13px;
-		}
-
-		.fas {
-			margin-right: 2em;
-		}
-
-		.fa-store {
-			color: $primary-color;
-		}
-	}
-}
-
-
-/* Main section */
-
-
-
-.resto-list {
-	background-color: $bg-two;
-	padding: 10px 0 20px 0;
-
-	h2 {
-		margin: 20px 20px;
-	}
-
-	&__tile {
-		width: 90%;
-		margin-inline-start: 0;
-		background-color: white;
-		margin: 10px 20px 20px 20px;
-		position: relative;
-		padding-bottom: 10px;
-		@include border-radius--4corner; 
-
-		&__img {
-			width: 100%;
-			height: 200px;
-			object-fit: cover;
-			@include border-radius--2corner;
-		}
-
-		&__banner {
-			position: absolute;
-			top: 8px;
-			right: 16px;
-			background-color: $tertiary-color;
-			padding: 5px 15px;
-			color: darken($tertiary-color, 40%);
-			border-radius: 3px 3px;
-			font-size: small;
-			font-weight: bold;
-		}
-
-		&__caption {
-			margin-left: 15px;
-			line-height: 0.5em;
-		}
-			
-	}
-}
 
 
 
